--- a/EFCore/Mvc/Views/Home/Index.cshtml
+++ b/EFCore/Mvc/Views/Home/Index.cshtml
@@ -6,3 +6,10 @@
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
+
+<div>
+    <a asp-route="salvarcategoria">Salvar categoria</a>
+    <br />
+    <a asp-route="consultarcategoria">Consultar categoria</a>
+</div>
+
