--- a/EFCore/Mvc/Views/Produto/Consultar.cshtml
+++ b/EFCore/Mvc/Views/Produto/Consultar.cshtml
@@ -19,20 +19,23 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Nome)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Categoria.Id)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Editar</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Detalhes</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Deletar</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Nome)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Categoria.Nome)
+                </td>
+                <td>
+                    <a asp-action="Editar" asp-controller="Produto" asp-route-id="@item.Id">Editar</a> |
+                    <a asp-action="Detalhes" asp-controller="Produto" asp-route-id="@item.Id">Detalhes</a> |
+                    <a asp-action="Deletar" asp-controller="Produto" asp-route-id="@item.Id">Deletar</a>
+                </td>
+            </tr>
+        }
     </tbody>
+
 </table>
+<a asp-action="Index" asp-controller="Home">Voltar para o início</a>
