--- a/EFCore/Mvc/Views/Produto/Salvar.cshtml
+++ b/EFCore/Mvc/Views/Produto/Salvar.cshtml
@@ -13,6 +13,7 @@
         <form asp-action="Salvar">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
+                <input type="hidden" asp-for="Id"/>
                 <label asp-for="Nome" class="control-label"></label>
                 <input asp-for="Nome" class="form-control" />
                 <label class="control-label">Categoria</label>
